# fast_api_with_poerty

./: .gitignore  README.md
practice_project/: pyproject.toml
practice_project/practice_project/: database.py  main.py  models.py  poetry_fastAPI_app.db  schemas.py  send_link_to_drive.py  test.py
