[tool.poetry]
name = "practice-project"
version = "0.1.0"
description = ""
authors = ["Harishkadimi <kadimiharish007@gmail.com>"]
readme = "README.md"
packages = [{include = "practice_project"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
uvicorn = "^0.21.0"
sqlalchemy = "^2.0.6"
google-auth = "^2.16.2"
google-api-python-client = "^2.81.0"
google-auth-oauthlib = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
